--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,16 @@
     "rete": "^2.0.3",
     "rete-area-plugin": "^2.0.4",
     "rete-auto-arrange-plugin": "^2.0.1",
+    "rete-comment-plugin": "^2.0.1",
     "rete-connection-plugin": "^2.0.2",
+    "rete-connection-reroute-plugin": "^2.0.1",
     "rete-context-menu-plugin": "^2.0.3",
+    "rete-engine": "^2.0.1",
     "rete-react-plugin": "^2.0.5",
-    "rete-render-utils": "^2.0.2"
+    "rete-render-utils": "^2.0.2",
+    "rete-structures": "^2.0.1",
+    "styled-components": "^6.1.11",
+    "web-worker": "^1.3.0"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.1.111",
