--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,14 @@
     "@mantine/notifications": "^7.9.1",
     "@tauri-apps/api": "^1",
     "@unocss/reset": "^0.60.0",
+    "@xterm/addon-canvas": "^0.7.0",
+    "@xterm/addon-image": "^0.8.0",
+    "@xterm/addon-ligatures": "^0.9.0",
+    "@xterm/addon-search": "^0.15.0",
+    "@xterm/addon-serialize": "^0.13.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/addon-webgl": "^0.18.0",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,7 +40,9 @@
     "rete-render-utils": "^2.0.2",
     "rete-structures": "^2.0.1",
     "styled-components": "^6.1.11",
-    "web-worker": "^1.3.0"
+    "web-worker": "^1.3.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.1.111",
